--- a/Config.ini
+++ b/Config.ini
@@ -1,13 +1,9 @@
-; [CUSTOM CONFIG]
-<CustomConvertConfig=>
-
-; Dibawah ini setingan default untuk convert gambar ke file .ico
-; Gunakan isian Custom Config di atas jika ingin seting-seting sendiri.
-
-; [DEFAULT CONFIG]
-; <ConvertConfig=-resize 245x245 ^( +clone -background BLACK -shadow 70x1.3+2+3.5 ^) +swap -background none -layers flatten -gravity CENTER -extent 256x256>
-
-
-; ------- Refrensi setingan --------
-; -gravity= Menentukan posisi gambar 
-; Opsi dari -gravity: CENTER= Tengah, SOUTH= Bawah, NORTH= Atas, WEST=Kiri, EAST=Kanan
+[FIMOFI CONFIGURATION]
+DrivePath=E:\Video\ANIME\#  DOWNLOAD\# N E W\- EXTRACT
+FItarget= 
+FIextension= 
+FItemplate=D:\Document\Script\FIMOFI Tools\Template\DVD Cover.ini 
+RefreshOpen=Index
+MKVtarget= 
+MKVextension= 
+MKVsetcover= 
